--- a/package.json
+++ b/package.json
@@ -1,27 +1,40 @@
 {
   "name": "Popup",
-  "version": "1.1.0",
-  "description": "Popup",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/no-nothing/repository.git"
-  },
+  "description": "A simple mobile popup box.",
+  "version": "1.2.0",
   "author": "zzp",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/no-nothing/popup.git"
+  },
+  "scripts": {
+    "init-cz": "commitizen init cz-conventional-changelog --save --save-exact",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
+  },
   "devDependencies": {
-    "browser-sync": "^2.18.5",
+    "babel-preset-env": "^1.2.2",
+    "browser-sync": "^2.18.8",
+    "commitizen": "^2.9.6",
+    "cz-conventional-changelog": "^2.0.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.2",
     "gulp-base64": "^0.1.3",
-    "gulp-clean-css": "^2.3.2",
+    "gulp-clean-css": "^3.0.3",
     "gulp-jshint": "^2.0.4",
     "gulp-less": "^3.3.0",
-    "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^2.0.0",
+    "gulp-sourcemaps": "^2.4.1",
+    "gulp-uglify": "^2.0.1",
     "jshint": "^2.9.4",
     "run-sequence": "^1.2.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
